# 2_AmbulanzApp

./: AerzteAdmin.cpp  AerzteAdmin.h  Ambulanz.cpp  Ambulanz.h  AmbulanzApp.cpp  AmbulanzUI.cpp  AmbulanzUI.h  Arzt.cpp  Arzt.h  CMakeLists.txt  Patient.cpp  Patient.h  PatientenAdmin.cpp  PatientenAdmin.h  Person.cpp  Person.h
